# Yuki2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
assets/engine/: visual.aseprite
demo/: assert_fail.ys  block_comment_smoke.ys  break_continue_smoke.ys  camera_demo.ys  do_while_smoke.ys  escape_smoke.ys  example_input.ys  import_smoke.ys  index_prop_smoke.ys  lambda_smoke.ys  lang_smoke.ys  main.ys  player.ys  require_smoke.ys  stdlib_demo.ys  test.aseprite  tokenizer_error.ys  tween_anim_smoke.ys
demo/modules/: README.md
demo/scenes/: game.ys  menu.ys  pause.ys
demo/subdir/: child.ys  mod.ys
docs/: api.md  changelog.md  design-notes.md  getting-started.md  language.md  patterns.md
scripts/: example_main.ys  util_module.ys
scripts/modules/: scene.ys  stdlib.ys  ui.ys  yuki_game.ys
src/: config.hpp  main.cpp  time.hpp  token.hpp  token_debug.hpp  tokenizer.cpp  window.cpp  window.hpp  yuki_runner.cpp  yuki_runner.hpp  yuki_script_loader.cpp  yuki_script_loader.hpp
src/core/: aseprite_loader.cpp  aseprite_loader.hpp  engine_bindings.cpp  engine_bindings.hpp  input.cpp  input.hpp  log.cpp  log.hpp  renderer2d.cpp  renderer2d.hpp  time.cpp  window.cpp  window.hpp
src/core/bindings/: anim_api.cpp  anim_api.hpp  binding_anim.cpp  binding_ase.cpp  binding_collision.cpp  binding_core.cpp  binding_input.cpp  binding_math.cpp  binding_render.cpp  binding_tween.cpp  binding_ui.cpp  collision_api.cpp  collision_api.hpp  core_api.cpp  core_api.hpp  input_api.cpp  input_api.hpp  math_api.cpp  math_api.hpp  register_bindings.hpp  render_api.cpp  render_api.hpp  state.cpp  state.hpp  tween_api.cpp  tween_api.hpp  ui_api.cpp  ui_api.hpp  value_utils.hpp
src/runtime/: dev_console.cpp  dev_console.hpp  imgui_layer.cpp  imgui_layer.hpp  yuki_runner.cpp  yuki_runner.hpp
src/script/: ast.hpp  ast_debug.cpp  ast_debug.hpp  builtins.cpp  builtins.hpp  environment.cpp  environment.hpp  function_value.hpp  interpreter.cpp  interpreter.hpp  parser.cpp  parser.hpp  parser_stmt.cpp  parser_stmt.hpp  token.hpp  token_debug.cpp  tokenizer.cpp  value.cpp  value.hpp
tools/vscode-yuki/: .vscodeignore  LICENSE  README.md  language-configuration.json  package.json  package_vsix.sh
tools/vscode-yuki/data/: symbols.json
tools/vscode-yuki/snippets/: yuki.json
tools/vscode-yuki/syntaxes/: yuki.tmLanguage.json
